# my-todo

./: .gitignore  README.md  package-lock.json
backend/: .env  __main__.py  pyproject.toml  sql_app.db  todo.db
backend/app/: __init__.py  apis.py
backend/mytodo/: __main__.py  apis.py  crud.py  database.py  models.py  schemas.py  test_apis.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/public/: manifest.json
frontend/server/: server.js
frontend/src/: index.tsx
frontend/src/components/: App.css  App.tsx  Header.tsx  Todos.tsx
frontend/src/components/create/: create.tsx
frontend/src/components/drawer/: drawer.tsx
frontend/src/components/list/: list.tsx
frontend/src/components/sider/: category.tsx
frontend/src/constant/: interface.ts
frontend/src/list/: TodoList.ts
frontend/src/testlist/: TodoList.ts
frontend/src/utils/: provider.ts
