[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["noobmyq <2331029011@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
fastapi = "^0.70.1"
SQLAlchemy = "^1.4.28"
sqlmodel = "^0.0.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
